@@ -3,13 +3,11 @@ package no.nav.dolly.plugins;
 import io.spring.gradle.dependencymanagement.dsl.DependencyManagementExtension;
 import org.gradle.api.Plugin;
 import org.gradle.api.Project;
-import org.gradle.api.artifacts.ResolvedArtifact;
 import org.gradle.api.file.DuplicatesStrategy;
 import org.gradle.api.plugins.JavaPlugin;
 import org.gradle.api.plugins.JavaPluginExtension;
 import org.gradle.api.tasks.bundling.Jar;
 import org.gradle.api.tasks.compile.JavaCompile;
-import org.gradle.api.tasks.testing.Test;
 import org.gradle.jvm.toolchain.JavaLanguageVersion;
 import org.gradle.plugins.ide.idea.model.IdeaModel;
 
@@ -82,20 +80,7 @@ public class DollyProxiesPlugin implements Plugin<Project> {
                 task.getOptions().getCompilerArgs().add("-parameters")
         );
 
-        project.getTasks().withType(Test.class).configureEach(test -> {
-            test.useJUnitPlatform();
-            test.jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED");
-            test.doFirst(task -> project
-                    .getConfigurations()
-                    .getByName("testRuntimeClasspath")
-                    .getResolvedConfiguration()
-                    .getResolvedArtifacts()
-                    .stream()
-                    .map(ResolvedArtifact::getFile)
-                    .filter(f -> f.getName().contains("byte-buddy-agent"))
-                    .findFirst()
-                    .ifPresent(file -> test.getJvmArgs().add("-javaagent:" + file)));
-        });
+        MockitoAgentSupport.configureTests(project);
 
         project.afterEvaluate(p -> {
             var bootJarTask = p.getTasks().findByName("bootJar");
